# long-videos-to-shorts

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  tiktok-developer-app-guide.md
src/clipengine/: audio_extract.py  candidates.py  cli.py  config.py  energy.py  events.py  fusion.py  ingest.py  logging_utils.py  metadata.py  pipeline.py  proc.py  render.py  subtitles.py  transcribe.py
src/clipengine/llm/: dispatcher.py  gemini.py  prompt.py
src/clipengine/publish/: instagram.py  oauth_server.py  runner.py  status.py  tiktok.py  tokens.py  types.py
tests/: conftest.py  test_candidates.py  test_cli.py  test_energy.py  test_fusion.py  test_ingest.py  test_llm_adapter.py  test_pipeline_e2e.py  test_publish_instagram.py  test_publish_oauth_server.py  test_publish_runner.py  test_publish_status.py  test_publish_tiktok.py  test_publish_tokens.py  test_subtitles.py  test_transcribe.py
tests/fixtures/: make_synthetic_media.py
