[project]
name = "clipengine"
version = "0.1.0"
description = "Recorte automático de clips verticales (9:16) de directos musicales, sin dependencia de IA generativa."
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2025.1",
    "librosa>=0.11.0",
    "soundfile>=0.14.0",
    "numpy>=2.0",
    "scipy>=1.14",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
ai = ["faster-whisper>=1.0", "google-genai>=2.0"]

[project.scripts]
clipengine = "clipengine.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
